Added courses page

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,13 @@
 .content {
 	padding: 150px 0px 100px 0px;
 }
+
+.course_box {
+	height: 300px;
+}
+
+.course_button {
+	position: absolute;
+  bottom: 20px;
+  right: 10px;
+}
