--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -26,7 +26,7 @@
                 </li>
                 <li class="page-scroll">
                     <%= link_to 'LOG IN', new_user_session_path unless user_signed_in? %>
-                    <%= link_to 'SIGN OUT', destroy_user_session_path(current_user), method: :delete if user_signed_in? %>      
+                    <%= link_to 'SIGN OUT', destroy_user_session_path, method: :delete if user_signed_in? %>      
                 </li>
             </ul>
         </div>
