Added intro index page

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -11,3 +11,12 @@
   bottom: 20px;
   right: 10px;
 }
+
+.underlined-header {
+	border-bottom: 1px solid #e74c3c;
+}
+
+.unindented_ul {
+	padding: 0;
+	list-style-type:none;
+}
