--- a/app/views/intro/show.html.erb
+++ b/app/views/intro/show.html.erb
@@ -1,1 +1,1 @@
-<%= render :file => 'app/views/intro/lessons/lesson_#{@lesson}'' %>
+<%= render :file => "app/views/intro/lessons/lesson_#{@lesson}" %>
