--- a/app/views/intro/lessons/lesson_1.html.erb
+++ b/app/views/intro/lessons/lesson_1.html.erb
@@ -1,10 +1,57 @@
 <h1>Congratulations!</h1>
 
 <p>
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	You've done it!
 </p>
+
+<p>
+	You've taken your first step to becoming a web developer. Give yourself a high five!
+</p>
+
+<!-- <button class = "btn btn-success btn-lg" id = "clickHighFive">HIGH FIVE!</button>
+ -->
+<div id = "HighFive" style = "width:80%;height:300px;display:none;">
+	<i class="fa fa-hand-paper-o" style = "font-size:300px;display:block;">Woooooooo!!!</i>
+</div>
+
+<div id = "HideHighFive"style = "width:80%;height:300px;">
+	<i class="fa fa-hand-paper-o" style = "font-size:300px;margin:0 auto;width:50px;display:block;"></i>
+</div>
+	
+<br>
+
+<p>
+	Our goal at Techrise is to give you the best resources to learn in an organized way. There are so many great resources out there but at the same time, it's so difficult to figure out how and where to start. We solve that for you.
+</p>
+
+<p>
+	The initial step in learning how to code is tough! At first, you won't know what you're doing at all. You'll be following tutorials, running into bugs, realizing you were simply missing a single semi-colon, etc. It's all part of learning.
+</p>
+
+<p>
+	We're here to support your journey. We've laid out a curriculum for you that will teach you to become a self-sufficient web developer who is able to learn at accelerated speeds.
+</p>
+
+<p>
+	There are many great websites that do the same thing. But often times, they are either too general and not practical - you'll go through basic lessons on syntax and things like that, but you'll never be able to create actual web applications - or they are too overwhelming - you'll have to go through hundreds of lessons in order to complete the entire curriculum.
+</p>
+
+<p>
+	Our goal is not to train you into superstar coders from day one. Instead our goal is to teach you the essential skills and tools in order for you to become one.
+</p>
+
+<p>
+	Learning how to code can and will change your life.
+</p>
+
+<%= link_to 'Ready?', intro_lesson_path(1), class: 'btn btn-danger btn-lg' %>
+
+
+<script>
+$( '#HideHighFive' ).click(function() {
+	$( '#HideHighFive' ).hide();
+	$( " #HighFive " ).show();
+  $( " #HighFive " ).hide( "puff", {percent:500}, 2000 );
+  $( '#HideHighFive' ).delay(2000).show(0);
+});
+</script>
