--- a/app/views/static_pages/_course.html.erb
+++ b/app/views/static_pages/_course.html.erb
@@ -1,5 +1,6 @@
 <div class = "col-sm-12 col-md-4 course_box">
-	<h4><%= course %></h4>
+	<h4 class = "underlined-header"><%= course %></h4>
 	<p><%= course_name %></p>
-	<%= link_to 'Learn', "", class: 'btn btn-danger course_button' %>
+	<%= link_to 'Learn', course_link, class: 'btn btn-danger course_button' if available %>
+	<%= link_to 'Coming Soon', "", class: 'btn btn-default course_button' if !available %>
 </div>
