--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -1,17 +1,18 @@
 <div class = "row">
 	<h1>Start Your Coding Journey</h1>
 
+	<%= render partial: 'course', locals: {course: 'Intro', course_name: "An introduction to web development and why it's so cool.", available: true, course_link: intro_lessons_path} %>
 
-	<%= render partial: 'course', locals: {course: 'HTML/CSS', course_name: "HTML and CSS is basically how you can make your web pages look nice. Learning the basics of HTML and CSS isn't too scary and is a good intro to web development."} %>
+	<%= render partial: 'course', locals: {course: 'HTML/CSS', course_name: "HTML and CSS is basically how you can make your web pages look nice. Learning the basics of HTML and CSS isn't too scary and is a good intro to web development.", available: false} %>
 	<!-- , lessons: HTMLCSS::LESSONS -->
-	<%= render partial: 'course', locals: {course: 'Ruby', course_name: 'Ruby is a beautiful programming language that makes programming so much easier for beginners. Master the fundamentals of any programming language by learning Ruby.'} %>
+	<%= render partial: 'course', locals: {course: 'Ruby', course_name: 'Ruby is a beautiful programming language that makes programming so much easier for beginners. Master the fundamentals of any programming language by learning Ruby.', available: false} %>
 
-	<%= render partial: 'course', locals: {course: 'Ruby on Rails', course_name: 'Learn the basics of the popular web framework and learn to build dynamic web applications.'} %>
+	<%= render partial: 'course', locals: {course: 'Ruby on Rails', course_name: 'Learn the basics of the popular web framework and learn to build dynamic web applications.', available: false} %>
 	<!-- , lessons: RubyOnRails::LESSONS -->
 
-	<%= render partial: 'course', locals: {course: 'JavaScript/jQuery', course_name: 'With JavaScript, you can manipulate the web page in super fun ways.'} %>
+	<%= render partial: 'course', locals: {course: 'JavaScript/jQuery', course_name: 'With JavaScript, you can manipulate the web page in super fun ways.', available: false} %>
 
-	<%= render partial: 'course', locals: {course: 'Git/GitHub', course_name: 'Git and GitHub is used by the majority of web developers. Learn what it is and how you can utilize it to collaborate and implement version control.'} %>
+	<%= render partial: 'course', locals: {course: 'Git/GitHub', course_name: 'Git and GitHub is used by the majority of web developers. Learn what it is and how you can utilize it to collaborate and implement version control.', available: false} %>
 
-	<%= render partial: 'course', locals: {course: 'Algorithms', course_name: 'Learning how to solve algorithms challenges will help you think logically and solve difficult problems in programming.'} %>
+	<%= render partial: 'course', locals: {course: 'Algorithms', course_name: 'Learning how to solve algorithms challenges will help you think logically and solve difficult problems in programming.', available: false} %>
 </div>
