--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -32,7 +32,7 @@
                 </div>
                 <div class="footer-col col-md-4">
                     <h3>About Techrise</h3>
-                    <p>Techrise aims to give people access to awesome resources around the internet so they can start building awesome ideas.</p>
+                    <p>Techrise aims to give awesome students access to awesome resources around the internet so they can start building awesome ideas.</p>
                 </div>
             </div>
         </div>
