--- a/app/views/intro/lessons/lesson_1.html.erb
+++ b/app/views/intro/lessons/lesson_1.html.erb
@@ -5,11 +5,10 @@
 </p>
 
 <p>
-	You've taken your first step to becoming a web developer. Give yourself a high five!
+	You've taken your first step to becoming a web developer. Give yourself a high five! (Click the hand)
 </p>
+<br>
 
-<!-- <button class = "btn btn-success btn-lg" id = "clickHighFive">HIGH FIVE!</button>
- -->
 <div id = "HighFive" style = "width:80%;height:300px;display:none;">
 	<i class="fa fa-hand-paper-o" style = "font-size:300px;display:block;">Woooooooo!!!</i>
 </div>
@@ -21,30 +20,32 @@
 <br>
 
 <p>
-	Our goal at Techrise is to give you the best resources to learn in an organized way. There are so many great resources out there but at the same time, it's so difficult to figure out how and where to start. We solve that for you.
+	Our goal at Techrise is to give you the best resources to learn in an organized way. There are so many great resources out there but at the same time, it's so difficult to figure out how and where to start. We do that for you.
 </p>
 
 <p>
-	The initial step in learning how to code is tough! At first, you won't know what you're doing at all. You'll be following tutorials, running into bugs, realizing you were simply missing a single semi-colon, etc. It's all part of learning.
+	The initial step in learning how to code is tough! At first, you won't know what you're doing at all. You'll be following tutorials, running into bugs, and then realizing the problem was a missing semi-colon, etc. It's all part of learning, but it's frustrating.
 </p>
 
 <p>
-	We're here to support your journey. We've laid out a curriculum for you that will teach you to become a self-sufficient web developer who is able to learn at accelerated speeds.
+	That's why we're here to support your journey. We're creating a curriculum for you that will teach you to become a self-sufficient web developer who is able to learn on their own.
 </p>
 
 <p>
-	There are many great websites that do the same thing. But often times, they are either too general and not practical - you'll go through basic lessons on syntax and things like that, but you'll never be able to create actual web applications - or they are too overwhelming - you'll have to go through hundreds of lessons in order to complete the entire curriculum.
+	There are many great websites that do amazing jobs at teaching. But sometimes, they are either too general and not practical - you'll go through basic lessons on syntax and things like that, but you'll never be able to create actual web applications - or they are too overwhelming - you'll have to go through hundreds of lessons in order to complete the entire curriculum. Or they cost a lot of money.
 </p>
 
 <p>
-	Our goal is not to train you into superstar coders from day one. Instead our goal is to teach you the essential skills and tools in order for you to become one.
+	Our goal is not to train you to become superstar coders from day one. Instead our goal is to teach you the essential skills and tools in order for you to become one in the future.
 </p>
 
 <p>
 	Learning how to code can and will change your life.
 </p>
 
-<%= link_to 'Ready?', intro_lesson_path(1), class: 'btn btn-danger btn-lg' %>
+<br>
+
+<%= link_to 'Are you ready?', intro_lesson_path(1), class: 'btn btn-danger btn-lg' %>
 
 
 <script>
