--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -86,9 +86,27 @@
         </div>
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                <form name="sentMessage" id="contactForm" novalidate>
+                <%= simple_form_for Contact.new(params[:contact]), html: {id: "contactForm"}, remote: true do |f| %>
+                  <div class="row control-group">
+                    <div class="form-group col-xs-12 floating-label-form-group controls">
+                      <%= f.input :name, required: true, placeholder: 'Name', class: 'form-control' %>
+                    </div>
+                  </div>
+
+                  <div class="row control-group">
+                    <div class="form-group col-xs-12 floating-label-form-group controls">
+                      <%= f.input :email, required: true, placeholder: 'Email', class: 'form-control' %>
+                    </div>
+                  </div>
+
+                  <div class="row control-group">
+                    <div class="form-group col-xs-12 floating-label-form-group controls">
+                      <%= f.input :message, as: :text, required: false, input_html: {rows: 6}, placeholder: 'Message', class: 'form-control' %>
+                    </div>
+                  </div>
+                  <%= f.button :submit, 'Send Message', class: 'btn btn-success btn-lg' %>
+                <% end %>
+                <!-- <form name="sentMessage" id="contactForm" novalidate>
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Name</label>
@@ -123,7 +141,7 @@
                         <div class="form-group col-xs-12">
                             <button type="submit" class="btn btn-success btn-lg">Send</button>
                         </div>
-                    </div>
+                    </div> -->
                 </form>
             </div>
         </div>
