--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -2,5 +2,5 @@
   <%= f.input :name, required: true %>
   <%= f.input :email, required: true %>
   <%= f.input :message, as: :text, required: false, input_html: {rows: 10} %>
-  <%= f.button :submit, 'Send Message', class: 'btn btn-primary' %>
+  <%= f.button :submit, 'Send Message', disable_with: 'Sending...', class: 'btn btn-primary' %>
 <% end %>
