--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -56,20 +56,39 @@
         </div>
         <div class="row">
             <div class="col-lg-4 col-lg-offset-2">
-                <p>
-                  Techrise's goal is to make you into a self-sufficient web developer. Our courses are free because we pull the best resources from all over the web to create a great curriculum.
-                </p>
+              <h3>Have no prior coding experience? You can still learn how to build web applications in Ruby on Rails in just 3 months</h3>
+              <p>
+                Learning to code isn’t hard - if you have the right support. 
+              </p>
+              <p>
+                Many resources are great at teaching coding, but some are aimed at being general, teaching you basic syntax and how the language works. Which is awesome, but it doesn’t teach you how to actually start building web apps.
+              </p>
+              <p>
+                There are also other resources aimed at giving you a full intensive workload that would take a lot of time and energy to complete. These are awesome too, but it honestly takes an incredible amount of self discipline and motivation to go through.
+              </p>
+              
             </div>
             <div class="col-lg-4">
-                <p>
-                  If you are someone who loves building things, who has wanted to code for some time, and didn't know how to get started, Techrise is for you!
-                </p>
+              <p>
+                At Techrise, our goal is to combine these resources to give you just the right amount of work so that you’ll learn the basics of web development and be able to start learning more advanced things on your own.
+              </p>
+              <p>
+                Imagine building your ideas, building your friend’s business idea, or just building a cool app to solve one of your daily problems. All that is possible by learning how to code.
+              </p>
+              <p>
+                The path to learning code can be rough. You’ll most likely be lost or quit unless you have a path that you can follow, and have a supportive community or mentors to guide you through the process.
+              </p>
+              <p>
+                By learning to code with us, we provide that support so that you can start building your ideas.
+              </p>
+              <p>
+                Click the button below, start coding, and change your life.
+              </p>
             </div>
+
+            <br>
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <%= link_to 'START CODING NOW', new_user_registration_path, class: "btn btn-danger btn-lg", style: "color:white;" %>
-<!--                 <a href="#" class="btn btn-lg btn-danger">
-                    START CODING NOW
-                </a> -->
             </div>
         </div>
     </div>
@@ -106,43 +125,6 @@
                   </div>
                   <%= f.button :submit, 'Send Message', class: 'btn btn-success btn-lg', id: 'ContactSubmit', data: { disable_with: "Sending..." } %>
                 <% end %>
-                <!-- <form name="sentMessage" id="contactForm" novalidate>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Name</label>
-                            <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Email Address</label>
-                            <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Phone Number</label>
-                            <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Message</label>
-                            <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <br>
-                    <div id="success"></div>
-                    <div class="row">
-                        <div class="form-group col-xs-12">
-                            <button type="submit" class="btn btn-success btn-lg">Send</button>
-                        </div>
-                    </div> -->
-                </form>
             </div>
         </div>
     </div>
