changed minor front end stuff

--- a/app/views/intro/_lesson_nav_section.html.erb
+++ b/app/views/intro/_lesson_nav_section.html.erb
@@ -2,6 +2,6 @@
 	<p>
   	Understand the gist? Cool, let's move on.
 	</p>
-	<%= link_to 'Previous Lesson', intro_lesson_path(@prev_lesson), class: 'btn btn-primary btn-lg' %>
+	<%= link_to 'Previous Lesson', intro_lesson_path(@prev_lesson), class: 'btn btn-warning btn-lg' %>
 	<%= link_to 'Next Lesson', intro_lesson_path(@next_lesson), class: 'btn btn-success btn-lg' %>
 </div>
