--- a/app/views/intro/lessons/lesson_1.html.erb
+++ b/app/views/intro/lessons/lesson_1.html.erb
@@ -20,7 +20,7 @@
 <br>
 
 <p>
-	Our goal at Techrise is to give you the best resources to learn in an organized way. There are so many great resources out there but at the same time, it's so difficult to figure out how and where to start. We do that for you.
+	Our goal at Techrise is to give you the best resources to learn in an organized way. There are so many great resources out there but at the same time, it's so difficult to figure out how and where to start. We provide those resources and lay out the path for you.
 </p>
 
 <p>
@@ -32,7 +32,7 @@
 </p>
 
 <p>
-	There are many great websites that do amazing jobs at teaching. But sometimes, they are either too general and not practical - you'll go through basic lessons on syntax and things like that, but you'll never be able to create actual web applications - or they are too overwhelming - you'll have to go through hundreds of lessons in order to complete the entire curriculum. Or they cost a lot of money.
+	There are many great websites that do amazing jobs at teaching. But sometimes, they are either too general and not practical - you'll go through basic lessons on syntax and things like that, but you'll never be able to create actual web applications - or they are too overwhelming - you'll have to go through hundreds of lessons in order to complete the entire curriculum, or they simply just cost a lot of money.
 </p>
 
 <p>
@@ -40,7 +40,7 @@
 </p>
 
 <p>
-	Learning how to code can and will change your life.
+	Learning how to code <i>can</i> and <i>will</i> change your life.
 </p>
 
 <br>
