--- a/app/views/intro/lessons/lesson_2.html.erb
+++ b/app/views/intro/lessons/lesson_2.html.erb
@@ -28,7 +28,7 @@
 
 <%= render partial: '/intro/lessons/quizzes', locals: { question: 'What does "Back End" typically refer to?', answer: "It's basically stuff related to the server and making sure the data is dealt with correctly.", number: 3 } %>
 
-<%= render partial: '/intro/lessons/quizzes', locals: { question: 'What is a "Full Stack" developer?', answer: "Full stack developers are those who can do both front end development and back end development.", number: 4 } %>
+<%= render partial: '/intro/lessons/quizzes', locals: { question: 'What is a "Full Stack" developer?', answer: "Full stack developers are people who can do both front end development and back end development.", number: 4 } %>
 
 <%= render partial: '/intro/lessons/quizzes', locals: { question: 'What is the difference between web sites and web applications?', answer: "Websites display static content and web applications have dynamic content with a live server.", number: 5 } %>
 
