--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -16,6 +16,10 @@
 	border-bottom: 1px solid #e74c3c;
 }
 
+.skill_logo {
+	height: 100px;
+}
+
 .unindented_ul {
 	padding: 0;
 	list-style-type:none;
