--- a/app/views/intro/lessons/lesson_2.html.erb
+++ b/app/views/intro/lessons/lesson_2.html.erb
@@ -35,3 +35,5 @@
 <br class = "clear">
 
 <%= render 'lesson_nav_section' %>
+
+<%= render partial: '/comments/for_lesson', locals: { chapter: Intro::LESSONS[0][0], lesson: 2} %>
