--- a/app/views/intro/lessons/lesson_2.html.erb
+++ b/app/views/intro/lessons/lesson_2.html.erb
@@ -36,4 +36,4 @@
 
 <%= render 'lesson_nav_section' %>
 
-<%= render partial: '/comments/for_lesson', locals: { chapter: Intro::LESSONS[0][0], lesson: 2} %>
+<%= render partial: '/comments/for_lesson', locals: { name: 'Intro', lesson: 2} %>
