--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,6 +7,11 @@
       <%= devise_error_messages! %>
 
       <div class="field">
+        <%= f.label :name %><br />
+        <%= f.text_field :name, autofocus: true, required: true, class: 'form-control' %>
+      </div>
+
+      <div class="field">
         <%= f.label :email %><br />
         <%= f.email_field :email, autofocus: true, class: 'form-control' %>
       </div>
@@ -28,6 +33,11 @@
       <div class="field">
         <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
         <%= f.password_field :current_password, autocomplete: "off", class: 'form-control' %>
+      </div>
+
+      <div class="field">
+        <%= f.label :avatar %><br />
+        <%= f.file_field :avatar %>
       </div>
       
       <br>
