--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,8 +6,13 @@
       <%= devise_error_messages! %>
 
       <div class="field">
+        <%= f.label :name %><br />
+        <%= f.email_field :name, autofocus: true, required: true, class: 'form-control' %>
+      </div>
+
+      <div class="field">
         <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+        <%= f.email_field :email, autofocus: true, required: true, class: 'form-control' %>
       </div>
 
       <div class="field">
@@ -15,7 +20,7 @@
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
-        <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+        <%= f.password_field :password, autocomplete: "off", required: true, class: 'form-control' %>
       </div>
 
       <div class="field">
