fixed reply bug

--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,21 +1,21 @@
 <%= link_to 'Back to lesson', back_to_lesson %>
 
 <h3><%= @comment.title %></h3>
-<p><%= @comment.description %></p>
-<p>by <%= comment_owner(@comment) %></p>
+<%= raw(@comment.description) %>
+<p class = "pull-right" >by <%= comment_owner(@comment) %></p>
 
 <hr>
 
 <% @comment.replies.each do |reply| %>
-	<p class = "pull-right"><%= reply.content %></p>
-	<p>by <%= reply_owner(reply) %></p>
+	<%= raw(reply.content) %>
+	<p class = "pull-right" >by <%= reply_owner(reply) %></p>
 	<br class = "clear">
 	<hr>
 <% end %>
 
 
 
-<%= simple_form_for :replies, url: forum_comment_replies_path(params[:forum_id], params[:id]), method: :post, input_html: {class: 'form-horizontal'} do |f|  %>
+<%= simple_form_for :reply, url: forum_comment_replies_path(params[:forum_id], params[:id]), method: :post, input_html: {class: 'form-horizontal'} do |f|  %>
 	<%= f.cktext_area :content, label: 'Comment', required: true %>
 	<%= f.input :user_id, :as => :hidden, :input_html => { :value => current_user.id } %>
 
