--- a/app/views/intro/lessons/lesson_3.html.erb
+++ b/app/views/intro/lessons/lesson_3.html.erb
@@ -37,9 +37,9 @@
 
 <h1>Quiz Time!</h1>
 
-<%= render partial: '/intro/lessons/quizzes', locals: { question: 'Why is Ruby a good first programming language?', answer: "It's a beginner friendly language and increases the chances of beginners to stick with learning how to code.", number: 1 } %>
+<%= render partial: '/shared/quizzes', locals: { question: 'Why is Ruby a good first programming language?', answer: "It's a beginner friendly language and increases the chances of beginners to stick with learning how to code.", number: 1 } %>
 
-<%= render partial: '/intro/lessons/quizzes', locals: { question: 'Why is Ruby on Rails a good first web framework to learn?', answer: "Basically it's beginner friendly, it's in demand, and lot's of awesome people are in the community :)", number: 2 } %>
+<%= render partial: '/shared/quizzes', locals: { question: 'Why is Ruby on Rails a good first web framework to learn?', answer: "Basically it's beginner friendly, it's in demand, and lot's of awesome people are in the community :)", number: 2 } %>
 
 <br class = "clear">
 
