--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,3 +1,24 @@
+<h3>Guidelines</h3>
+<ul class = "unindented_ul">
+	<li>Google your question first</li>
+	<p>
+		Becoming a great googler and getting your own answers is an essential skill to become a competent developer. Google is smarter than anyone, ask it first, and if you still don't understand, seek for assistance.</p>
+	</p>
+
+	<li>Ask good questions</li>
+	<p>
+		Bad questions will result in bad answers. Good questions are those which are specific, concise, and practical.
+	</p>
+
+	<li>See previous questions</li>
+	<p>
+		Has anyone else asked the same question? If so, read the answers to those questions first before seeking further assistance.
+	</p>
+
+</ul>
+
+<br>
+
 <%= simple_form_for :comment, url: forum_comments_path, method: :post, input_html: {class: 'form-horizontal'} do |f| %>
 	<%= f.input :title, required: true %>
 	<%= f.cktext_area :description, as: :text, input_html: {rows: 6}, required: true %>
