added turob sprockets

--- a/app/views/intro/lessons/lesson_2.html.erb
+++ b/app/views/intro/lessons/lesson_2.html.erb
@@ -1,4 +1,4 @@
-<h1>What do web developers do?</h1>
+<h1><%= title_for(Intro, 1, 2) %></h1>
 
 <p>
 	In short, web developers are awesome people who create dynamic web applications to solve problems and provide solutions. One example would be Facebook. It provided a way for people to connect online and stalk the photos of attractive friends. Another example would be AirBnB. It solved the problem of unused spaces in houses and created a solution to match people who wanted to host their houses to guests and travelers who wanted a cheaper option to expensive hotels.
