--- a/app/views/intro/lessons/lesson_3.html.erb
+++ b/app/views/intro/lessons/lesson_3.html.erb
@@ -1,4 +1,4 @@
-<h1>What language should I learn?</h1>
+<h1><%= title_for(Intro, 1, 3) %></h1>
 
 <p>
 	The answer is - it depends. But to give an opinionated opinion, we are going to say Ruby is a language that is a great first language. The reason why is because <strong>after you learn one programming language, it's easier to learn another one.</strong> Overcoming the initial step in learning your first programming language is the key to getting started in coding.
