--- a/app/views/intro/lessons/lesson_4.html.erb
+++ b/app/views/intro/lessons/lesson_4.html.erb
@@ -1,4 +1,4 @@
-<h1>Overview of the languages and tools you will be using</h1>
+<h1><%= title_for(Intro, 1, 4) %></h1>
 
 <p>
   Throughout your time with Techrise, you'll be learning the main tools that will get you started to become a competent developer. The main languages and frameworks you will be learning will be Ruby, Ruby on Rails, HTML, CSS, JavaScript, jQuery, and Git/GitHub.
