--- a/app/views/intro/lessons/lesson_1.html.erb
+++ b/app/views/intro/lessons/lesson_1.html.erb
@@ -1,4 +1,4 @@
-<h1>Congratulations!</h1>
+<h1><%= title_for(Intro, 1, 1) %></h1>
 
 <p>
 	You've done it!
@@ -47,6 +47,9 @@
 
 <%= link_to 'Are you ready?', intro_lesson_path(2), class: 'btn btn-danger btn-lg' %>
 
+<br class = "clear">
+
+<%= render partial: '/comments/for_lesson', locals: { name: 'Intro', lesson: 1} %>
 
 <script>
 $( '#HideHighFive' ).click(function() {
