Changed title of lesson

--- a/app/views/intro/lessons/lesson_5.html.erb
+++ b/app/views/intro/lessons/lesson_5.html.erb
@@ -60,7 +60,7 @@
 </p>
 
 <div id = "HighFive" style = "width:80%;height:300px;display:none;">
-	<i class="fa fa-hand-paper-o" style = "font-size:300px;display:block;">I'm pumped!!!</i>
+	<i class="fa fa-hand-paper-o" style = "font-size:300px;display:block;"><span style = "font-size:100px">I'm ready!!!!</span></i>
 </div>
 
 <div id = "HideHighFive"style = "width:80%;height:300px;">
