--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -3,7 +3,7 @@
 
 	<%= render partial: 'course', locals: {course: 'Intro', course_name: "An introduction to web development and why it's so cool.", available: true, course_link: intro_path} %>
 
-	<%= render partial: 'course', locals: {course: 'HTML/CSS', course_name: "HTML and CSS is basically how you can make your web pages look nice. Learning the basics of HTML and CSS isn't too scary and is a good intro to web development.", available: false} %>
+	<%= render partial: 'course', locals: {course: 'HTML/CSS', course_name: "HTML and CSS is basically how you can make your web pages look nice. Learning the basics of HTML and CSS isn't too scary and is a good intro to web development.", available: true, course_link: html_css_path} %>
 	<!-- , lessons: HTMLCSS::LESSONS -->
 	<%= render partial: 'course', locals: {course: 'Ruby', course_name: 'Ruby is a beautiful programming language that makes programming so much easier for beginners. Master the fundamentals of any programming language by learning Ruby.', available: false} %>
 
