Changed front end stuff

--- a/app/views/html_css/lessons/lesson_1.html.erb
+++ b/app/views/html_css/lessons/lesson_1.html.erb
@@ -27,17 +27,17 @@
 </p>
 
 <p>
-  What you should be focusing on is getting the general flow of how a web page is structured. Think "oh cool, so this is how you make this to look like this". If you stumble across a question like "wait, how do I make a link to another URL again?", <strong>Google it.</strong> Google "how to make a link to url html" and you'll get your answer in 2 seconds. What do you do if you want to make the color of your font red? Google "how to make font color red". Boom, you got your answer. Easy, right?
+  What you should be focusing on though, is getting the general flow of how a web page is structured. Think "oh cool, so this is how you make this to look like this". If you stumble across a question like "wait, how do I make a link to another URL again?", <strong>Google it.</strong> Google "how to make a link to url html" and you'll get your answer in 2 seconds. What do you do if you want to make the color of your font red? Google "how to make font color red". Boom, you got your answer. Easy, right?
 </p>
 
 <p>
-  Make sense? Cool. We're super excited to get you started with coding! Let's begin, if you are ready, that is.
+  Cool. Well we're all set! We're super excited to get you started with coding! Let's begin, if you are ready, that is.
 </p>
 
 <blockquote>
-	<p>
+	<h3>
 		After this, there is no turning back. You take the blue pill -- the story ends, you wake up in your bed and believe whatever you want to believe. You take the red pill -- you stay in Wonderland and I show you how deep the rabbit hole goes.
-	</p>
+	</h3>
 	<footer>Morpheus</footer>
 </blockquote>
 
