--- a/app/views/html_css/lessons/lesson_2.html.erb
+++ b/app/views/html_css/lessons/lesson_2.html.erb
@@ -9,11 +9,15 @@
 </p>
 
 <p>
-	You'll be building a personal website, a responsive blog theme, a small business website, and a CSS robot. Pretty awesome stuff! For an intro course, it's one of the best courses out there. By the way if you were wondering, responsive means that the front end responds to the screen size of the user. For example, this website is responsive. Try shrinking the browser and you will see the components shrinking and expanding.
+	You'll be building a personal website, a responsive blog theme, a small business website, and a CSS robot. Pretty awesome stuff! For an intro course, it's one of the best courses out there.
 </p>
 
 <p>
-  Don't worry about completing Project 5 for now since it goes into JavaScript. For now, let's try to finish Project 1 ~ 4. If you're really ambitious, you can go ahead and finish Project 5, but it's not necessary to do just yet. We'll get there though!
+	By the way if you were kind of wondering what responsive means, it means that the front end responds to the screen size of the user. For example, this website is responsive. Try shrinking the browser and you will see the components shrinking and expanding like magic.
+</p>
+
+<p>
+  For now, let's not worry about completing Project 5 since it goes into JavaScript. Let's focus on trying to finish Project 1 ~ 4. If you're really ambitious, you can go ahead and finish Project 5, but it's not necessary to do just yet. We'll get there soon though!
 </p>
 
 <p>
